--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
 
 body {
     background: url('img/background.png') no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
     font-size: 62.5%;
 }
 
@@ -22,13 +22,15 @@ img {
 }
 header {
 	padding: 35px 30px 0 30px;;
-	text-align: center;	
+	margin: 0 auto;	
+	width: 920px;
+	text-align: center;
 }
 .container {
 	padding: 0 30px;
 	display: flex;
-	flex-wrap: wrap;
-	max-width: 920px;
+	flex-direction: row;
+	width: 920px;
 	margin: 35px auto;
 	justify-content: space-between;
 }
@@ -226,3 +228,8 @@ select {
 		font-size: 1rem;
 	}
 }
+@media only screen and(max-width: 768px) {
+		.container {
+			flex-direction: column;
+		}
+	}
