--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background: url("img/background.png") no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   font-size: 62.5%; }
 
 h1 {
@@ -26,13 +26,15 @@ img {
 
 header {
   padding: 35px 30px 0 30px;
+  margin: 0 auto;
+  width: 920px;
   text-align: center; }
 
 .container {
   padding: 0 30px;
   display: flex;
-  flex-wrap: wrap;
-  max-width: 920px;
+  flex-direction: row;
+  width: 920px;
   margin: 35px auto;
   justify-content: space-between; }
 
@@ -231,5 +233,8 @@ input[name="phone-number"] {
   .btn-red,
   .btn-disabled {
     font-size: 1rem; } }
+@media only screen and (max-width: 768px) {
+  .container {
+    flex-direction: column; } }
 
 /*# sourceMappingURL=style.css.map */
