--- a/_settings.scss
+++ b/_settings.scss
@@ -4,11 +4,10 @@
 
 @mixin fields {
 	color: black;
-	font-family: 'TitilliumText22L';
+	font-family: 'Titillium2';
 	border-radius: 4px;
 	padding: 10px;
 	width: 100%;
 	box-sizing: border-box;
-	font-weight: 300;
 	font-size: 1rem;
 }
