--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,15 @@ body {
     font-size: 62.5%;
 }
 
+@font-face {
+  font-family: "Titillium";
+  src: url("TitilliumText22L004.otf");
+}
+@font-face {
+  font-family: "Titillium2";
+  src: url("TitilliumText22L002.otf");
+}
+
 h1 {
 	@include hidden;
 }
@@ -13,7 +22,7 @@ h2 {
 	color: #fff;
 	font-size: 2rem;
 	margin-bottom: 40px;
-	font-family: 'TitilliumText22L';
+	font-family: 'Titillium';
 }
 img { 
 	opacity: 0.3;
@@ -69,6 +78,7 @@ textarea {
 	color: #fff;
 	font-size: 1.2rem;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+	font-family: 'Titillium';
 }
 .btn-red {
 	background-image: linear-gradient(to bottom, #f76f7f 0%, #F03747 100%);
@@ -76,6 +86,7 @@ textarea {
 	font-size: 1.2rem;
 	border-color: #a72c36;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+	font-family: 'Titillium';
 }
 .btn-disabled {
 	background-image: linear-gradient(to bottom, #a3d740 0%, #7EC31F 100%);
@@ -84,6 +95,7 @@ textarea {
 	font-size: 1.2rem;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
 	opacity: 0.3;
+	font-family: 'Titillium';
 }
 input[type="submit"].btn-green:hover {
 	background-image: linear-gradient(to bottom, #87b335 0%, #619418 100%);
