--- a/style.scss
+++ b/style.scss
@@ -196,6 +196,7 @@ input[type="checkbox"]:checked + label:before {
 select {
 	appearance: none;
 	-webkit-appearance: none;
+	-moz-appearance: none;
 	background-image: url('img/arrow.png');
 	background-repeat: no-repeat;
     background-position: 95%;
@@ -245,3 +246,9 @@ select {
 			flex-direction: column;
 		}
 	}
+
+
+input[type="checkbox"]:focus + label:before
+{
+	  border: 1px solid #5E9ED6;
+}
